# Robot-SemseterProject3

./: .gitignore  README.md  fff.sh
Computer/: CMakeLists.txt  buffermsg.cpp  buffermsg.h  main.cpp  msgbuffer.cpp  msgbuffer.h  msghandeler.cpp  msghandeler.h  seqhandler.cpp  seqhandler.h  signalrecoder.cpp  ui.cpp  ui.h
DFT/Robot/: buffermsg.cpp  msgbuffer.h  msghandeler.cpp  robotmovement.cpp  signalrecoder.h
DiverseGamle/Computer/: CMakeLists.txt  buffermsg.cpp  msgbuffer.cpp  msghandeler.cpp
DiverseGamle/DFT/Robot/: CMakeLists.txt  buffermsg.h  signalrecoder.cpp
DiverseGamle/Robot/: CMakeLists.txt  main.cpp  robotmovement.cpp
DiverseGamle/RobotOldFFT/: msghandeler.h  signalrecoder.cpp  signalrecoder.h
DiverseGamle/ffttest/: CMakeLists.txt  fft.cpp  fft.h  main.cpp
DiverseGamle/robotMovement/: main.cpp  robotmovement.h
Main/Classes/: msgbuffer.cpp  robotmovement.cpp  robotmovement.h  seqhandler.h  ui.cpp
Main/Computer/: CMakeLists.txt  main.cpp
Main/Robot/: main.cpp
Program/: CMakeLists.txt  buffermsg.cpp  msgbuffer.cpp  msghandeler.cpp  msghandeler.h  signalrecoder.cpp
Robot/: CMakeLists.txt  buffermsg.cpp  buffermsg.h  main.cpp  msgbuffer.cpp  msgbuffer.h  msghandeler.cpp  msghandeler.h  robotmovement.cpp  signalrecoder.cpp
RobotOldFFT/: buffermsg.cpp  robotmovement.h
TestProgrammer/Range&Succ/Classes/: buffermsg.h  signalrecorder.h
TestProgrammer/Range&Succ/Computer/: main.cpp
TestProgrammer/Range&Succ/Robot/: main.cpp
TestProgrammer/fftdftReliability/Classes/: buffermsg.cpp  buffermsg.h  ui.cpp  ui.h
TestProgrammer/fftdftReliability/Robot/: main.cpp
TestProgrammer/fftogdft/fftvsdft/: main.cpp
TestProgrammer/fftogdftSpeed/fftvsdft/: CMakeLists.txt
TestProgrammer/fftogdftSpeed/smapelRecorder/Classes/: buffermsg.h  msgbuffer.h  msghandler.cpp  msghandler.h  seqhandler.cpp  signalrecorder.cpp  ui.cpp
TestProgrammer/fftogdftSpeed/smapelRecorder/Robot/: main.cpp
TestProgrammer/test af robot movement/Classes/: buffermsg.cpp
TestProgrammer/test af robot movement/Computer/: main.cpp
TestProgrammer/test af robot movement/Robot/: CMakeLists.txt  main.cpp
ffttest/: main.cpp
msgdecoder/: CMakeLists.txt  main.cpp  msghandeler.cpp  msghandeler.h
reciver/: CMakeLists.txt  buffermsg.cpp  buffermsg.h  main.cpp  signalrecoder.cpp  signalrecoder.h
recivertest/: CMakeLists.txt  buffermsg.cpp  buffermsg.h  main.cpp  signalrecoder.cpp
robotMovement/: CMakeLists.txt  main.cpp  robotmovement.cpp  robotmovement.h  temp2.cpp  temp2.h
semesterproject3sender/: CMakeLists.txt
sender/: CMakeLists.txt  main.cpp  messagetobuffer.cpp  messagetobuffer.h  msgbuffer.cpp
seqHandler/: CMakeLists.txt  msghandeler.h
testaffft/: CMakeLists.txt  main.cpp
